# context-weave

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: architecture.md  capability-map.md  composition-reference.md  context-merge-policy-registry.md  context-slice-profile-registry.md  context-snapshot-contract.md  context-trace-contract.md  fixture-registry.md  installation-and-release.md  operation-report-contract.md  operation-request-contract.md  product-vision-spec.md  result-and-error-taxonomy.md  skill-spec.md  standard-context-contract.md  standard-target-contract.md  target-binding-contract.md  versioning-policy.md
examples/minimal/: binding.needs-input.json  binding.ready.json  context.json  context.source.json  target.json  target.needs-input.json
scripts/: bootstrap  build  check-dist  cw
skills/context-weave/: SKILL.md
skills/cw-context/: SKILL.md
skills/cw-context/references/: context-operations.md
skills/cw-operate/: SKILL.md
skills/cw-operate/references/: operate-operations.md
skills/cw-target/: SKILL.md
skills/cw-target/references/: target-operations.md
src/context_weave/: __init__.py  __main__.py  cli.py  doctor.py  errors.py  fixture_catalog.py  registry.py  result.py  skill_catalog.py
src/context_weave/context/: __init__.py  build.py  helpers.py  merge.py  models.py  policies.py  read.py  slice.py  snapshot.py  trace.py
tests/: test_cli.py  test_compositions.py  test_context_ops.py  test_contracts.py  test_doctor.py  test_operate_ops.py  test_paths.py  test_registry.py  test_target_ops.py
(+12 files in other folders)
